# packMP3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.txt
docs/: developer.txt  howtocompile.txt  versionnumbering.txt
packaging/debian/: control
scripts/: baseline.txt  bench_mp3.sh  make_corpus.sh
source/: Makefile  aricoder.cpp  aricoder.h  build_all.sh  packmp3.cpp  packmp3dll.h  packmp3lib.h  pmp3tbl.h
